--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -1,6 +1,7 @@
 body{
     margin: 0px;
     background-color: #212121;
+    font-family: "Nixie";
 }
 
 @font-face {
@@ -32,7 +33,6 @@ nav img{
 
 nav a{
     color: black;
-    font-family: "Nixie";
     /* Trick : set a transparent underline that appear progressivly on focus*/
     text-decoration: underline 0.05em #00000000;
     transition: all 1s;
@@ -73,7 +73,20 @@ nav a:hover, nav a:focus{
     }
 }
 
+/**************** Footer ************************/
 
+footer{
+    display: flex;
+    flex-direction: column;
+    background-color: #f1f6f8;
+    text-align: center;
+    gap: 1em;
+    padding: 1em;
+}
+
+footer p{
+    margin: 0px;
+}
 
 
 /**************** Media Query ************************/
