--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -119,6 +119,48 @@ article:hover, article:has(a:focus){
     transform: translateY(-1em);
 }
 
+/********************* Between Main and Footer ************************/
+
+
+section{
+    display: flex;
+    justify-content: center;
+}
+
+
+#loadMore{
+    margin-bottom: 2em;
+    background-color: #f1f6f8;
+    padding: 1em;
+    border-radius: 1em;
+    font-size: large;
+    transition: all 0.5s;
+}
+
+#loadMore:hover, #loadMore:focus{
+    color: #d32f2f;
+}
+
+.loader{
+    display: flex;
+    justify-self: center;
+    height: 3em;
+    width: 3em;
+    border-right: #f1f6f8 3px dashed;
+    border-top: #f1f6f8 3px dotted;
+    border-radius: 50%;
+    animation: rotate 1s infinite linear;
+    margin-bottom: 2em;
+}
+
+@keyframes rotate{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
 
 /********************* Footer ************************/
 
