--- a/Assets/css/movie.css
+++ b/Assets/css/movie.css
@@ -76,6 +76,13 @@ nav a:hover, nav a:focus{
 
 /********************* Main ************************/
 
+article{
+    background-color: #d32f2f;
+    justify-self: center;
+}
+
+
+
 
 
 /********************* Footer ************************/
