--- a/Assets/css/movie.css
+++ b/Assets/css/movie.css
@@ -77,23 +77,33 @@ nav a:hover, nav a:focus{
 /********************* Main ************************/
 
 article{
-    background-color: #d32f2f;
+    background: linear-gradient(135deg, rgba(97,34,34,1) 0%, rgba(176,21,21,1) 35%, rgba(176,21,21,1) 65%, rgba(97,34,34,1) 100%);
     justify-self: center;
     border-radius: 1em;
     margin: 0.5em;
-    padding: 0.5em; 
-    text-align: center;
+    padding: 1em; 
     font-size: large;
     margin-top: 2em;
     margin-bottom: 2em;
+    color: #d6dde0;
 }
 
+.description{
+    font-size: x-large
+}
+
+article h1{
+    text-align: center;
+}
 
 article img{
     border-radius: 1em;
+    display: flex;
+    justify-self: center;
 }
 
-article > div > div{
+
+.infoBox{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -102,6 +112,11 @@ article > div > div{
     column-gap: 1em;
 }
 
+
+.filmData{
+    display: flex;
+    gap: 2em;
+}
 
 
 
@@ -154,6 +169,10 @@ footer p{
 
     .slide-out{
         animation: slide-in 1s reverse
+    }
+
+    .filmData{
+        display: block;
     }
 
 }
