Fix() : Min-height for main prevention for loading

--- a/Assets/css/search.css
+++ b/Assets/css/search.css
@@ -182,6 +182,10 @@ article:hover, article:has(a:focus){
     transform: translateY(-1em);
 }
 
+#error{
+    color: #d6dde0;
+    font-size: xx-large;
+}
 
 /********************* Footer ************************/
 
