--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -77,6 +77,7 @@ nav a:hover, nav a:focus{
 /********************* Main ************************/
 
 main{
+    min-height: 80vh;
     padding: 2em;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(700px, 1fr));
