--- a/Assets/css/movie.css
+++ b/Assets/css/movie.css
@@ -76,6 +76,10 @@ nav a:hover, nav a:focus{
 
 /********************* Main ************************/
 
+main{
+    min-height: 70vh;
+}
+
 article{
     background: linear-gradient(135deg, rgba(97,34,34,1) 0%, rgba(176,21,21,1) 35%, rgba(176,21,21,1) 65%, rgba(97,34,34,1) 100%);
     justify-self: center;
